@@ -1,5 +1,11 @@
 2012-12-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* nasl/nasl_scanner_glue.c (security_message): Directly retrieve
+	the cvss value from the NVTI meta data when there is no parameter
+	given.
+
+2012-12-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* nasl/exec.c: Replaced all calls of cvt_bool by cell2bool.
 	(cvt_bool): Remove. It is a unused wrapper around cell2bool() since
 	ages.
